--- a/ReportManager/ReportManager.vcxproj
+++ b/ReportManager/ReportManager.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="IOSystem.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="Subject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IOSystem.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="Subject.h" />
   </ItemGroup>
