--- a/ReportManager/ReportManager.vcxproj.filters
+++ b/ReportManager/ReportManager.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Person.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IOSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Subject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Person.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IOSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
